--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.3",
   "author": "aleku399",
   "dependencies": {
-    "bulma": "^0.7.0",
+    "bootstrap": "^4.2.1",
     "gatsby": "^2.0.66",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
@@ -22,6 +22,7 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "modern-normalize": "^0.5.0",
     "netlify-cms": "^2.3.1",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
