--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-tags": "^2.0.0",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
@@ -22,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "mdbreact": "^4.9.0",
     "modern-normalize": "^0.5.0",
     "netlify-cms": "^2.3.1",
     "node-sass": "^4.11.0",
@@ -31,7 +33,9 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-image-lightbox": "^5.1.0",
     "react-typography": "^0.16.18",
+    "reactstrap": "^7.1.0",
     "typography": "^0.16.18",
     "uuid": "^3.2.1"
   },
