--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
     "react-image-lightbox": "^5.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-typography": "^0.16.18",
     "reactstrap": "^7.1.0",
     "typography": "^0.16.18",
