--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "author": "aleku399",
   "dependencies": {
     "bootstrap": "^4.2.1",
-    "gatsby": "^2.0.66",
+    "gatsby": "^2.0.66-beta.56",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
-    "gatsby-plugin-purgecss": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-purgecss": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^3.0.4-beta.4",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sharp": "^2.0.15-beta.7",
     "gatsby-plugin-tags": "^2.0.0",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-remark-copy-linked-files": "^2.0.7",
-    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-images": "^3.0.1-beta.9",
     "gatsby-remark-relative-images": "^0.2.0",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.15",
+    "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
+    "gatsby-source-filesystem": "^2.0.12-beta.9",
+    "gatsby-transformer-remark": "^2.1.15-beta.4",
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
