--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4-beta.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.15-beta.7",
+    "gatsby-plugin-sitemap": "^2.2.16",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-tags": "^2.0.0",
     "gatsby-plugin-typography": "^2.2.5",
